Custom training loop

--- a/movielens.ipynb
+++ b/movielens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,21 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
+    "import copy\n",
     "from pathlib import Path\n",
     "from itertools import zip_longest\n",
+    "from collections import defaultdict\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import torch\n",
-    "from torch import nn\n",
-    "from torch import optim\n",
-    "from torch import functional as F"
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch import functional\n",
+    "import torch.nn.functional as F \n",
+    "from torch.nn.modules.loss import _Loss"
    ]
   },
   {
@@ -55,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +149,7 @@
        "4       1     1172     4.0  1260759205"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +241,7 @@
        "4                                       Comedy  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -645,7 +650,7 @@
        "624       5.0   5.0   5.0   2.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,15 +757,23 @@
     "        features = torch.cat([self.u(users), self.m(movies)], dim=1)\n",
     "        x = self.drop(features)\n",
     "        x = self.hidden(x)\n",
-    "        out = F.sigmoid(self.fc(x))\n",
+    "        out = torch.sigmoid(self.fc(x))\n",
     "        if minmax is not None:\n",
     "            min_rating, max_rating = minmax\n",
     "            out = out*(max_rating - min_rating) + min_rating\n",
     "        return out\n",
     "    \n",
     "    def _init(self):\n",
+    "        \n",
+    "        def init(m):\n",
+    "            if type(m) == nn.Linear:\n",
+    "                torch.nn.init.xavier_uniform_(m.weight)\n",
+    "                m.bias.data.fill_(0.01)\n",
+    "                \n",
     "        self.u.weight.data.uniform_(-0.05, 0.05)\n",
     "        self.m.weight.data.uniform_(-0.05, 0.05)\n",
+    "        self.hidden.apply(init)\n",
+    "        init(self.fc)\n",
     "    \n",
     "    \n",
     "def get_list(n):\n",
@@ -773,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +795,7 @@
        "(0.5, 5.0)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,27 +807,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = EmbeddingNet(n, m, hidden=[300, 300, 150], dropouts=[0.5, 0.5, 0.25])"
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = {'train': (X_train, y_train), 'val': (X_valid, y_valid)}\n",
+    "dataset_sizes = {'train': len(X_train), 'val': len(X_valid)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "EmbeddingNet(\n",
-       "  (u): Embedding(671, 50)\n",
-       "  (m): Embedding(9066, 50)\n",
+       "  (u): Embedding(671, 150)\n",
+       "  (m): Embedding(9066, 150)\n",
        "  (drop): Dropout(p=0.02)\n",
        "  (hidden): Sequential(\n",
-       "    (0): Linear(in_features=100, out_features=300, bias=True)\n",
+       "    (0): Linear(in_features=300, out_features=300, bias=True)\n",
        "    (1): ReLU()\n",
        "    (2): Dropout(p=0.5)\n",
        "    (3): Linear(in_features=300, out_features=300, bias=True)\n",
@@ -828,43 +851,156 @@
        ")"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "net = EmbeddingNet(n, m, n_factors=150, hidden=[300, 300, 150], dropouts=[0.5, 0.5, 0.25])\n",
     "net"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def batches(X, y, bs=32, shuffle=True):\n",
-    "    n = len(X)\n",
-    "    n_batches = math.ceil(n // bs)\n",
+    "    X, y = np.asarray(X), np.asarray(y)\n",
     "    if shuffle:\n",
-    "        index = np.random.permutation(n)\n",
+    "        index = np.random.permutation(X.shape[0])\n",
     "        X, y = X[index], y[index]\n",
-    "    for i in range(n_batches):\n",
-    "        batch = X[i*bs:(i + 1)*bs], y[i*bs:(i + 1)*bs]\n",
-    "        yield batch"
+    "    n_batches = int(math.ceil(X.shape[0] // bs))\n",
+    "    for k in range(n_batches):\n",
+    "        x_batch = torch.LongTensor(X[k*bs:(k + 1)*bs])\n",
+    "        y_batch = torch.FloatTensor(y[k*bs:(k + 1)*bs])\n",
+    "        yield x_batch, y_batch.view(-1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[005/100] train: 0.5552 - val: 0.8412\n",
+      "[010/100] train: 0.3644 - val: 0.9120\n",
+      "[015/100] train: 0.2877 - val: 0.9362\n",
+      "[020/100] train: 0.2486 - val: 0.9509\n",
+      "[025/100] train: 0.2248 - val: 0.9500\n",
+      "[030/100] train: 0.2088 - val: 0.9501\n",
+      "[035/100] train: 0.1987 - val: 0.9507\n",
+      "[040/100] train: 0.1849 - val: 0.9570\n",
+      "[045/100] train: 0.1778 - val: 0.9667\n",
+      "[050/100] train: 0.1718 - val: 0.9474\n",
+      "[055/100] train: 0.1644 - val: 0.9606\n",
+      "[060/100] train: 0.1615 - val: 0.9529\n",
+      "[065/100] train: 0.1557 - val: 0.9572\n",
+      "[070/100] train: 0.1510 - val: 0.9498\n",
+      "[075/100] train: 0.1468 - val: 0.9771\n",
+      "[080/100] train: 0.1431 - val: 0.9490\n",
+      "[085/100] train: 0.1404 - val: 0.9581\n",
+      "[090/100] train: 0.1368 - val: 0.9600\n",
+      "[095/100] train: 0.1353 - val: 0.9387\n",
+      "[100/100] train: 0.1335 - val: 0.9390\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "lr = 1e-3\n",
+    "wd = 1e-5\n",
+    "bs = 400\n",
+    "n_epochs = 100\n",
+    "net.to(device)\n",
+    "criterion = nn.MSELoss(reduction='sum')\n",
+    "optimizer = optim.Adam(net.parameters(), lr=lr, weight_decay=wd)\n",
+    "best_loss = np.inf\n",
+    "best_weights = None\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    stats = {'epoch': epoch + 1, 'total': n_epochs}\n",
+    "    \n",
+    "    for phase in ('train', 'val'):\n",
+    "        training = phase == 'train'\n",
+    "        running_loss = 0.0\n",
+    "        n_batches = 0\n",
+    "        \n",
+    "        for batch in batches(*datasets[phase], shuffle=training, bs=bs):\n",
+    "            x_batch, y_batch = [b.to(device) for b in batch]\n",
+    "            optimizer.zero_grad()\n",
+    "        \n",
+    "            with torch.set_grad_enabled(training):\n",
+    "                outputs = net(x_batch[:, 1], x_batch[:, 0], minmax)\n",
+    "                loss = criterion(outputs, y_batch)\n",
+    "                if training:\n",
+    "                    loss.backward()\n",
+    "                    optimizer.step()\n",
+    "                    \n",
+    "            running_loss += loss.item()\n",
+    "            \n",
+    "        epoch_loss = running_loss / dataset_sizes[phase]\n",
+    "        stats[phase] = epoch_loss\n",
+    "        if phase == 'val' and epoch_loss < best_loss:\n",
+    "            best_loss = epoch_loss\n",
+    "            best_weights = copy.deepcopy(net.state_dict())\n",
+    "\n",
+    "    if epoch % 5 == 4:\n",
+    "        print('[{epoch:03d}/{total:03d}] train: {train:.4f} - val: {val:.4f}'.format(**stats))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = 1e-4\n",
-    "n_epochs = 100\n",
+    "net.load_state_dict(best_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groud_truth, predictions = [], []\n",
     "\n",
-    "for epoch in range(n_epochs):\n",
-    "    pass"
+    "with torch.no_grad():\n",
+    "    for batch in batches(*datasets['val'], shuffle=False, bs=bs):\n",
+    "        x_batch, y_batch = [b.to(device) for b in batch]\n",
+    "        outputs = net(x_batch[:, 1], x_batch[:, 0], minmax)\n",
+    "        groud_truth.extend(y_batch.tolist())\n",
+    "        predictions.extend(outputs.tolist())\n",
+    "\n",
+    "groud_truth = np.asarray(groud_truth).ravel()\n",
+    "predictions = np.asarray(predictions).ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final RMSE: 0.8937\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_loss = np.sqrt(np.mean((predictions - groud_truth)**2))\n",
+    "print(f'Final RMSE: {final_loss:.4f}')"
    ]
   }
  ],
