N-Grams and CBOW

--- a/bow.ipynb
+++ b/bow.ipynb
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fa4fd23bcf0>"
+       "<torch._C.Generator at 0x7f0fe05e7c90>"
       ]
      },
      "execution_count": 2,
@@ -221,11 +221,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 020 - loss: 0.0490\n",
-      "Epoch: 040 - loss: 0.0238\n",
-      "Epoch: 060 - loss: 0.0157\n",
-      "Epoch: 080 - loss: 0.0117\n",
-      "Epoch: 100 - loss: 0.0093\n"
+      "Epoch: 020 - loss: 0.1962\n",
+      "Epoch: 040 - loss: 0.0954\n",
+      "Epoch: 060 - loss: 0.0629\n",
+      "Epoch: 080 - loss: 0.0469\n",
+      "Epoch: 100 - loss: 0.0374\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
     "optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
     "\n",
     "for epoch in range(100):\n",
-    "    running_loss = []\n",
+    "    epoch_loss = 0\n",
     "    \n",
     "    for instance, label in data:\n",
     "        model.zero_grad()\n",
@@ -244,10 +244,9 @@
     "        loss = loss_function(log_probs, target)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        running_loss.append(loss.item())\n",
+    "        epoch_loss += loss.item()\n",
     "    \n",
     "    if epoch % 20 == 19:\n",
-    "        epoch_loss = np.mean(running_loss)\n",
     "        print('Epoch: %03d - loss: %2.4f' % (epoch + 1, epoch_loss))"
    ]
   },
@@ -267,6 +266,281 @@
    ],
    "source": [
     "test(model, test_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word Embeddings: Encoding Lexical Semantics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch import optim\n",
+    "from torch.nn import functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7f0fe05e7c90>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONTEXT_SIZE = 2\n",
+    "EMBEDDING_DIM = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_sentence = \"\"\"When forty winters shall besiege thy brow,\n",
+    "And dig deep trenches in thy beauty's field,\n",
+    "Thy youth's proud livery so gazed on now,\n",
+    "Will be a totter'd weed of small worth held:\n",
+    "Then being asked, where all thy beauty lies,\n",
+    "Where all the treasure of thy lusty days;\n",
+    "To say, within thine own deep sunken eyes,\n",
+    "Were an all-eating shame, and thriftless praise.\n",
+    "How much more praise deserv'd thy beauty's use,\n",
+    "If thou couldst answer 'This fair child of mine\n",
+    "Shall sum my count, and make my old excuse,'\n",
+    "Proving his beauty by succession thine!\n",
+    "This were to be new made when thou art old,\n",
+    "And see thy blood warm when thou feel'st it cold.\"\"\".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trigrams = [\n",
+    "    ([test_sentence[i], test_sentence[i + 1]], test_sentence[i + 2])\n",
+    "     for i in range(len(test_sentence) - 2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(['When', 'forty'], 'winters'), (['forty', 'winters'], 'shall'), (['winters', 'shall'], 'besiege')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(trigrams[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = set(test_sentence)\n",
+    "word_to_index = {word: i for i, word in enumerate(vocab)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NGramLanguageModeler(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, vocab_size, embedding_dim, context_size):\n",
+    "        super().__init__()\n",
+    "        self.embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.linear1 = nn.Linear(context_size * embedding_dim, 128)\n",
+    "        self.linear2 = nn.Linear(128, vocab_size)\n",
+    "        \n",
+    "    def forward(self, inputs):\n",
+    "        embeds = self.embeddings(inputs).view((1, -1))\n",
+    "        hid = F.relu(self.linear1(embeds))\n",
+    "        out = self.linear2(hid)\n",
+    "        log_probs = F.log_softmax(out, dim=1)\n",
+    "        return log_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 001 loss: 519.5103\n",
+      "Epoch 002 loss: 517.1770\n",
+      "Epoch 003 loss: 514.8590\n",
+      "Epoch 004 loss: 512.5547\n",
+      "Epoch 005 loss: 510.2629\n",
+      "Epoch 006 loss: 507.9822\n",
+      "Epoch 007 loss: 505.7097\n",
+      "Epoch 008 loss: 503.4464\n",
+      "Epoch 009 loss: 501.1916\n",
+      "Epoch 010 loss: 498.9447\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss_function = nn.NLLLoss()\n",
+    "model = NGramLanguageModeler(len(vocab), EMBEDDING_DIM, CONTEXT_SIZE)\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.001)\n",
+    "\n",
+    "for epoch in range(10):\n",
+    "    total_loss = 0\n",
+    "    \n",
+    "    for context, target in trigrams:\n",
+    "        context_idxs = torch.tensor([\n",
+    "            word_to_index[w] for w in context], \n",
+    "            dtype=torch.long)\n",
+    "        \n",
+    "        target = torch.tensor(\n",
+    "            [word_to_index[target]], \n",
+    "            dtype=torch.long)\n",
+    "        \n",
+    "        model.zero_grad()\n",
+    "        log_probs = model(context_idxs)\n",
+    "        loss = loss_function(log_probs, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        total_loss += loss.item()\n",
+    "        \n",
+    "    print('Epoch %03d loss: %2.4f' % (epoch + 1, total_loss))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: Continuous Bag-of-Words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONTEXT_SIZE = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_text = \"\"\"We are about to study the idea of a computational process.\n",
+    "Computational processes are abstract beings that inhabit computers.\n",
+    "As they evolve, processes manipulate other abstract things called data.\n",
+    "The evolution of a process is directed by a pattern of rules\n",
+    "called a program. People create programs to direct processes. In effect,\n",
+    "we conjure the spirits of the computer with our spells.\"\"\".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = set(raw_text)\n",
+    "vocab_size = len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_to_index = {word: i for i, word in enumerate(vocab)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataset(text, context_size):\n",
+    "    cs = context_size\n",
+    "    for i in range(cs, len(text) - cs):\n",
+    "        left = [text[i - c] for c in range(cs, 0, -1)]\n",
+    "        right = [text[i + c] for c in range(1, cs + 1)]\n",
+    "        context = left + right\n",
+    "        target = text[i]\n",
+    "        yield context, target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = create_dataset(raw_text, CONTEXT_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CBOW(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, vocab_size, embedding_dim, context_size):\n",
+    "        super().__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.linear = nn.Linear(embedding_dim, 128)\n",
+    "    \n",
+    "    def forward(self, inputs):\n",
+    "        embed = self.embedding(inputs).view((1, -1))\n",
+    "        out = self.linear(torch.sum(embed))\n",
+    "        log_probs = F.log_softmax(out)\n",
+    "        return log_probs"
    ]
   }
  ],
