--- a/names.ipynb
+++ b/names.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f8e4adf78f0>"
+       "<torch._C.Generator at 0x7f887a6a2930>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,48 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2018-08-20 21:45:35--  https://download.pytorch.org/tutorial/data.zip\n",
-      "Resolving download.pytorch.org (download.pytorch.org)... 205.251.219.72, 205.251.219.66, 205.251.219.114, ...\n",
-      "Connecting to download.pytorch.org (download.pytorch.org)|205.251.219.72|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2882130 (2.7M) [application/zip]\n",
-      "Saving to: ‘/home/ck/data.zip’\n",
-      "\n",
-      "/home/ck/data.zip   100%[===================>]   2.75M  4.72MB/s    in 0.6s    \n",
-      "\n",
-      "2018-08-20 21:45:36 (4.72 MB/s) - ‘/home/ck/data.zip’ saved [2882130/2882130]\n",
-      "\n",
-      "Archive:  /home/ck/data.zip\n",
-      "  inflating: /home/ck/data/eng-fra.txt  \n",
-      "   creating: /home/ck/data/names/\n",
-      "  inflating: /home/ck/data/names/Arabic.txt  \n",
-      "  inflating: /home/ck/data/names/Chinese.txt  \n",
-      "  inflating: /home/ck/data/names/Czech.txt  \n",
-      "  inflating: /home/ck/data/names/Dutch.txt  \n",
-      "  inflating: /home/ck/data/names/English.txt  \n",
-      "  inflating: /home/ck/data/names/French.txt  \n",
-      "  inflating: /home/ck/data/names/German.txt  \n",
-      "  inflating: /home/ck/data/names/Greek.txt  \n",
-      "  inflating: /home/ck/data/names/Irish.txt  \n",
-      "  inflating: /home/ck/data/names/Italian.txt  \n",
-      "  inflating: /home/ck/data/names/Japanese.txt  \n",
-      "  inflating: /home/ck/data/names/Korean.txt  \n",
-      "  inflating: /home/ck/data/names/Polish.txt  \n",
-      "  inflating: /home/ck/data/names/Portuguese.txt  \n",
-      "  inflating: /home/ck/data/names/Russian.txt  \n",
-      "  inflating: /home/ck/data/names/Scottish.txt  \n",
-      "  inflating: /home/ck/data/names/Spanish.txt  \n",
-      "  inflating: /home/ck/data/names/Vietnamese.txt  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !wget https://download.pytorch.org/tutorial/data.zip -O ~/data.zip\n",
     "# !unzip ~/data.zip -d ~\n",
@@ -128,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +160,7 @@
        "'Slusarski'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -341,6 +302,13 @@
    ],
    "source": [
     "line_to_tensor('Jones').size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification Model Definition"
    ]
   },
   {
@@ -563,7 +531,6 @@
     "\n",
     "current_loss = 0\n",
     "history = []\n",
-    "\n",
     "start = time.time()\n",
     "\n",
     "for epoch in range(1, n_epochs + 1):\n",
@@ -765,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,12 +758,17 @@
     "        return output, hidden\n",
     "    \n",
     "    def init_hidden(self):\n",
-    "        return torch.zeros(1, self.hidden_size)"
+    "        hidden = torch.zeros(1, self.hidden_size)\n",
+    "        return hidden.to(self.device)\n",
+    "    \n",
+    "    @property\n",
+    "    def device(self):\n",
+    "        return next(self.parameters()).device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,17 +788,17 @@
     "    index = all_categories.index(category)\n",
     "    one_hot = [0] * n_categories\n",
     "    one_hot[index] = 1\n",
-    "    return torch.LongTensor(one_hot).view(1, n_categories)"
+    "    return torch.FloatTensor(one_hot).view(1, n_categories)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "def input_tensor(line):\n",
-    "    tensor = torch.zeros(len(line), n_letters)\n",
+    "    tensor = torch.zeros(len(line), n_letters, dtype=torch.float)\n",
     "    for i, letter in enumerate(line):\n",
     "        index = all_letters.index(letter)\n",
     "        tensor[i][index] = 1\n",
@@ -835,19 +807,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "def target_tensor(line):\n",
-    "    letter_indexes = [all_letters.index(letter) for letter in line]\n",
+    "    letter_indexes = [all_letters.index(letter) for letter in line[1:]]\n",
     "    letter_indexes.append(n_letters - 1)\n",
     "    return torch.LongTensor(letter_indexes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,6 +829,161 @@
     "    t_input = input_tensor(line)\n",
     "    t_target = target_tensor(line)\n",
     "    return t_category, t_input, t_target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_since(since):\n",
+    "    now = time.time()\n",
+    "    seconds = now - since\n",
+    "    minutes = math.floor(seconds / 60)\n",
+    "    seconds -= minutes * 60\n",
+    "    return '%dm %ds' % (minutes, seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, category, line, target, lr=0.0005):\n",
+    "    target.unsqueeze_(-1)\n",
+    "    hidden = model.init_hidden()\n",
+    "    \n",
+    "    model.zero_grad()\n",
+    "    \n",
+    "    loss = 0\n",
+    "    for char_line, char_target in zip(line, target):\n",
+    "        output, hidden = model(category, char_line, hidden)\n",
+    "        char_loss = F.nll_loss(output, char_target)\n",
+    "        loss += char_loss\n",
+    "    \n",
+    "    loss.backward()\n",
+    "    for p in model.parameters():\n",
+    "        p.data.add_(-lr, p.grad.data)\n",
+    "    \n",
+    "    return output, loss.item() / line.size(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = 'cuda:0' if torch.cuda.is_available() else 'cpu'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  5000   5% (0m 27s) 2.7039\n",
+      " 10000  10% (0m 54s) 2.1013\n",
+      " 15000  15% (1m 21s) 2.6376\n",
+      " 20000  20% (1m 48s) 1.5142\n",
+      " 25000  25% (2m 15s) 2.7228\n",
+      " 30000  30% (2m 42s) 3.0687\n",
+      " 35000  35% (3m 9s ) 2.6315\n",
+      " 40000  40% (3m 36s) 1.9951\n",
+      " 45000  45% (4m 3s ) 2.3672\n",
+      " 50000  50% (4m 30s) 2.4415\n",
+      " 55000  55% (4m 57s) 2.3789\n",
+      " 60000  60% (5m 24s) 1.8240\n",
+      " 65000  65% (5m 51s) 1.9411\n",
+      " 70000  70% (6m 18s) 3.1486\n",
+      " 75000  75% (6m 45s) 2.4857\n",
+      " 80000  80% (7m 12s) 2.5628\n",
+      " 85000  85% (7m 38s) 2.1749\n",
+      " 90000  90% (8m 5s ) 2.3264\n",
+      " 95000  95% (8m 32s) 2.1445\n",
+      "100000 100% (8m 59s) 2.5622\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_hidden = 128\n",
+    "rnn = RNN(n_letters, n_hidden, n_letters)\n",
+    "rnn.to(device)\n",
+    "\n",
+    "n_epochs = 100000\n",
+    "print_every = 5000\n",
+    "plot_every = 1000\n",
+    "\n",
+    "current_loss = 0\n",
+    "history = []\n",
+    "start = time.time()\n",
+    "\n",
+    "for epoch in range(1, n_epochs + 1):\n",
+    "    example = [t.to(device) for t in random_training_example()]\n",
+    "    output, loss = train(rnn, *example)\n",
+    "    current_loss += loss\n",
+    "    \n",
+    "    if epoch % print_every == 0:\n",
+    "        stats = epoch, epoch/n_epochs*100, time_since(start), loss\n",
+    "        print('%6d %3d%% (%-6s) %.4f' % stats)\n",
+    "    \n",
+    "    if epoch % plot_every == 0:\n",
+    "        history.append(current_loss / plot_every)\n",
+    "        current_loss = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample(model, category, start_letter='A', max_length=20):\n",
+    "    with torch.no_grad():\n",
+    "        t_category = category_tensor(category).to('cuda:0')\n",
+    "        t_input = input_tensor(start_letter).to('cuda:0')\n",
+    "        hidden = model.init_hidden()\n",
+    "        \n",
+    "        output_name = start_letter\n",
+    "        \n",
+    "        for i in range(max_length):\n",
+    "            output, hidden = rnn(t_category, t_input[0], hidden)\n",
+    "            top_value, top_index = output.topk(1)\n",
+    "            top_index = top_index[0][0]\n",
+    "            if top_index == n_letters - 1:\n",
+    "                break\n",
+    "            else:\n",
+    "                letter = all_letters[top_index]\n",
+    "                output_name += letter\n",
+    "            t_input = input_tensor(letter).to('cuda:0')\n",
+    "                \n",
+    "        return output_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Roukov'"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample(rnn, 'Russian', 'R')"
    ]
   },
   {
