--- a/names.ipynb
+++ b/names.ipynb
@@ -968,30 +968,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Roukov'"
+       "'Santer'"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample(rnn, 'Russian', 'R')"
+    "sample(rnn, 'English', 'S')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
